--- a/EventManagmentMVCCore/Views/_ViewImports.cshtml
+++ b/EventManagmentMVCCore/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using EventManagmentMVCCore
 @using EventManagmentMVCCore.Models
+@using Event.DOM
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
