--- a/EventManagmentMVCCore/Views/Registration/Registration.cshtml
+++ b/EventManagmentMVCCore/Views/Registration/Registration.cshtml
@@ -7,7 +7,7 @@
 <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
 <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
 <link href="~/Content/loading-bar.css" rel="stylesheet" />
-<div class="row justify-content-center">
+<div class="row">
     <div class="col-xl-8 col-lg-7">
         <div class="card shadow mb-4">
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -22,19 +22,19 @@
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                    <div class="col-xs-offset-4 col-xs-4">
+                    <div class="form-row">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="Name" class="control-label"></label>
                             <input asp-for="Name" class="form-control" />
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="Address" class="control-label"></label>
                             <textarea asp-for="Address" class="form-control"></textarea>
                             <span asp-validation-for="Address" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="Country" class="control-label"></label>@{
                                 IEnumerable<SelectListItem> ctryList = (IEnumerable<SelectListItem>)TempData["country"];
                             }
@@ -42,42 +42,42 @@
                             </select>
                             <span asp-validation-for="Country" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="State" class="control-label"></label>
                             <select id="ddlState" asp-for="State" class="form-control"></select>
                             <span asp-validation-for="State" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="City" class="control-label"></label>
                             <select id="ddlCity" asp-for="City" class="form-control"></select>
                             <span asp-validation-for="City" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="Mobileno" class="control-label"></label>
                             <input asp-for="Mobileno" class="form-control" />
                             <span asp-validation-for="Mobileno" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="EmailID" class="control-label"></label>
                             <input asp-for="EmailID" class="form-control" />
                             <span asp-validation-for="EmailID" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="Username" class="control-label"></label>
                             <input asp-for="Username" class="form-control" />
                             <span asp-validation-for="Username" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="Password" class="control-label"></label>
                             <input asp-for="Password" class="form-control" />
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="ConfirmPassword" class="control-label"></label>
                             <input asp-for="ConfirmPassword" class="form-control" />
                             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="Gender" class="control-label"></label>
                             <select asp-for="Gender" class="form-control">
                                 <option value="Male">Male</option>
@@ -85,12 +85,12 @@
                             </select>
                             <span asp-validation-for="Gender" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="Birthdate" class="control-label"></label>
                             <input asp-for="Birthdate" type="date" class="form-control" />
                             <span asp-validation-for="Birthdate" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6">
                             <label asp-for="RoleID" class="control-label"></label>
                             <select asp-for="RoleID" class="form-control">
                                 <option value="1">Admin</option>
