--- a/EventManagmentMVCCore/Views/Admin/Dashboard.cshtml
+++ b/EventManagmentMVCCore/Views/Admin/Dashboard.cshtml
@@ -12,7 +12,7 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            <a href="#/Venue">Add Venue</a>
+                            <a asp-action="VenueShowall" asp-controller="Venue">Show Venue</a>
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Venue</div>
                     </div>
