--- a/EventManagmentMVCCore/Views/_ViewImports.cshtml
+++ b/EventManagmentMVCCore/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using EventManagmentMVCCore
 @using EventManagmentMVCCore.Models
 @using Event.DOM
+@using Event.DAL
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
