--- a/EventManagmentMVCCore/Views/_ViewImports.cshtml
+++ b/EventManagmentMVCCore/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using EventManagmentMVCCore
 @using EventManagmentMVCCore.Models
+@using EventManagmentMVCCore.ViewModel
 @using Event.DOM
 @using Event.DAL
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
