--- a/EventManagmentMVCCore/Views/Venue/VenueDetails.cshtml
+++ b/EventManagmentMVCCore/Views/Venue/VenueDetails.cshtml
@@ -1,9 +1,15 @@
 ﻿@model Venue
-
 @{
     ViewData["Title"] = "VenueDetails";
 }
-
+@section Style {
+    <style>
+        .imageThumbnail {
+            height: 200px;
+            width: auto;
+        }
+    </style>
+}
 <h1>VenueDetails</h1>
 
 <div>
@@ -11,28 +17,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VenueID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VenueID)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.VenueName)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.VenueName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VenueFilename)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VenueFilename)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VenueFilePath)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VenueFilePath)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Createdby)
@@ -53,6 +41,24 @@
             @Html.DisplayFor(model => model.VenueCost)
         </dd>
     </dl>
+    <div class="row card-deck">
+        @{
+            var photoPath = "~/UploadedFiles/" + (Model.VenueFilePath ?? "noimage.jpg");
+        }
+        <div class="card m-3" style="min-width: 18rem; max-width:30.5%;">
+            <div class="card-header">
+                <h3>@Model.VenueName</h3>
+            </div>
+
+            <img class="card-img-top imageThumbnail" src="@photoPath"
+                 asp-append-version="true" />
+
+            <div class="card-footer text-center">
+                <a href="#" class="btn btn-primary m-1">Edit</a>
+                <a href="#" class="btn btn-danger m-1">Delete</a>
+            </div>
+        </div>
+    </div>
 </div>
 <div>
     @Html.ActionLink("Edit", "VenueEdit", new {  id = Model.VenueID  }) |
