Equipment Code Added

--- a/EventManagmentMVCCore/Views/Admin/Dashboard.cshtml
+++ b/EventManagmentMVCCore/Views/Admin/Dashboard.cshtml
@@ -29,9 +29,9 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            <a href="#/Equipment">Add Equiments</a>
+                            <a asp-action="Index" asp-controller="Equipment">Add Equiments</a>
                         </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Venue</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Equipment</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -46,9 +46,9 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            <a href="#/Food">Add Food</a>
+                            <a asp-action="Index" asp-controller="Food">Add Food</a>
                         </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Venue</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Food</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -63,9 +63,9 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            <a href="#/Lighting">Add Lighting</a>
+                            <a asp-action="Index" asp-controller="Lighting">Add Lighting</a>
                         </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Venue</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Lighting</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -80,9 +80,9 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            <a href="#/Flower">Add Flowers</a>
+                            <a asp-action="Index" asp-controller="Flower">Add Flowers</a>
                         </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Venue</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Flowers</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -97,9 +97,9 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            <a href="#/BookingApproval">Approval</a>
+                            <a asp-action="Index" asp-controller="BookingApproval">Approval</a>
                         </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Venue</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">Pending Approval</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -114,9 +114,8 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            <a href="#/BookingSearch">Booking Search</a>
+                            <a asp-action="Index" asp-controller="BookingSearch">Booking Search</a>
                         </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Venue</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
