Added Light and Flower

--- a/EventManagmentMVCCore/Views/Admin/Dashboard.cshtml
+++ b/EventManagmentMVCCore/Views/Admin/Dashboard.cshtml
@@ -63,7 +63,7 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            <a asp-action="Index" asp-controller="Lighting">Add Lighting</a>
+                            <a asp-action="Index" asp-controller="Light">Add Lighting</a>
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">Count of Lighting</div>
                     </div>
