--- a/EventManagmentMVCCore/Views/Shared/_EventManagLayout.cshtml
+++ b/EventManagmentMVCCore/Views/Shared/_EventManagLayout.cshtml
@@ -6,13 +6,10 @@
     <title>@ViewData["Title"]</title>
 
     <!-- Custom fonts for this template-->
-    <link href="~/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="~/css/login.min.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
-
-    <!-- Custom styles for this template-->
-    <link href="~/css/sb-admin-2.min.css" rel="stylesheet">
     @RenderSection("Style", required: false)
 </head>
 
@@ -405,21 +402,9 @@
             </div>
         </div>
     </div>
-
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap core JavaScript-->
-    <script src="~/vendor/jquery/jquery.min.js"></script>
-    <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="~/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="~/js/sb-admin-2.min.js"></script>
-
+    <script src="~/js/lib-Jquery.min.js"></script>
+    <script src="~/js/common.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
-
 </body>
 
 </html>
